--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -550,6 +550,10 @@ As with the grand mean, we can't calculate this population level information.
 
 So we need to rely upon sample-level information to estimate the the variability in population means.  You can check out the sample-level means in the diagram below. As we discussed previously. For the $A$ independent variable, these means have a sample size of $15$.
 
+```{r, out.width="80%", echo = FALSE}
+knitr::include_graphics("ch_deeper_nway/images/nway_design_A_sample.png")
+```
+
 INSERT DIAGRAM HERE
 
 1) We ESTIMATE the grand mean using the sample-level means. We refer to our grand mean estimate using $\bar{bar{bar}}$. There are two bars about the $x$ to indicate that it is the mean of means. **Note that this "grand mean" of participants is the same as taking the mean of all participants (assuming equal cell sizes).**
