--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -609,6 +609,8 @@ We calculate an F-value to compare these two values:
 $$
 \begin{align}
 F &= \frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{a-1}}{\frac{s_{people}^2}{nb}}\\
+&= \frac{\frac{\sum (\bar{x_{Ai}}-\bar{\bar{x}})^2}{a-1}}{\frac{s_{people}^2}{nb}}\\
+&= \frac{\frac{(\bar{x}_{A_1} - \bar{\bar{x}})^2 + (\bar{x}_{A_2} - \bar{\bar{x}})^2}{a-1}}{\frac{s_{people}^2}{nb}}\\
 &=\frac{\frac{(77.33333 - 66.56667)^2 + (55.8 - 66.56667)^2}{2-1}}{\frac{60}{(5)(3)}}\\
 &=\frac{231.8422}{\frac{60}{(5)(3)}}\\
 &=\frac{231.8422}{\frac{60}{15}}\\
@@ -726,6 +728,8 @@ s_{\mu_B}^2 &=  \frac{\sum (\bar{x}_{B_i}-\bar{\bar{x}})^2}{b-1} \\
 \end{aligned}
 $$
 
+
+
 When you estimate the variance is sample means this way (using the total variance formula) the number you obtain will reflect two things.
 
 1) Random sampling error variance: $\frac{\sigma_{people}^2}{na}$
@@ -754,9 +758,13 @@ Estimated variance sampling error | $\frac{s_{people}^2}{na} = 6.0$ |$\frac{\sig
 
 We calculate an F-value to compare these two values:
 
+
+
 $$
 \begin{align}
 F &= \frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{\frac{s_{people}^2}{na}}\\
+&= \frac{\frac{\sum (\bar{x_{Bi}}-\bar{\bar{x}})^2}{b-1}}{\frac{s_{people}^2}{na}}\\
+&= \frac{\frac{(\bar{x}_{B_1} - \bar{\bar{x}})^2 + (\bar{x}_{B_2} - \bar{\bar{x}})^2 + (\bar{x}_{B_3} - \bar{\bar{x}})^2 }{b-1}}{\frac{s_{people}^2}{na}}\\
 &=\frac{\frac{(65.4 - 66.56667)^2 + (62.6 - 66.56667)^2 + (71.7 - 66.56667)^2}{3-1}}{\frac{60}{(5)(2)}}\\
 &=\frac{21.72333}{\frac{60}{(5)(2)}}\\
 &=\frac{21.72333}{\frac{60}{10}}\\
