--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -965,6 +965,26 @@ Estimated population variance | $s_{people}^2$ |$\sigma_{people}^2$ | $ab(n-1)$
 Comparison using $F$-ratio | $\frac{\frac{\sum (\overline{x_{residual_i}} - \overline{\overline{x_{residual}}})^2}{(a-1)(b-1)}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + n \sigma_{AB}^2}{\sigma_{people}^2}$ | $[(a-1)(b-1),ab(n-1)]$
 
 
+## Confirmatory vs Exporatory
+
+## Simple main effects
+
+## Comparing means
+
+### two means
+
+t-test with d-value
+
+contrast with d-value
+
+### weighted means
+
+contrast with effect size
+
+
+
+
+
 
 
 
